fixed overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,9 +130,8 @@ input:placeholder-shown {
   .payment {
     max-width: 90%;
   }
-
   .element {
-    left: 0;
+    max-width: 100%;
   }
 
   .payment-img {
